fix(bid): win product logic